// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MdxcAsset should parse markdown correctly. 1`] = `
Array [
  Object {
    "type": "js",
    "vale": "const React = require('react').default || require('react')
const { createElement, createFactory } = require('react')
const Mdx = require(\\"./index.md\\").default || require(\\"./index.md\\");
module.exports = function({ factories={} }) {
  const {
    p = createFactory('p'),
    wrapper = createFactory('div'),
  } = factories

  return wrapper({},

p({},
  \\"import React from \\\\\\"react\\\\\\";\\",
),
p({},
  \\"console.log(\\\\n  \\",
  createElement(\\"h1\\", null,
    \\"\\\\n    \\",
    createElement(Mdx, null),
    \\"Garwacke\\\\n  \\",
  ),
  \\",\\\\n  \\\\\\"!\\\\\\"\\\\n);\\",
)

  )
}
",
  },
]
`;

exports[`MdxcAsset should parse markdown with images correctly. 1`] = `
Array [
  Object {
    "type": "js",
    "vale": "const React = require('react').default || require('react')
const { createElement, createFactory } = require('react')

module.exports = function({ factories={} }) {
  const {
    h1 = createFactory('h1'),
    h2 = createFactory('h2'),
    img = createFactory('img'),
    p = createFactory('p'),
    wrapper = createFactory('div'),
  } = factories

  return wrapper({},

h1({\\"id\\": \\"Test\\"},
  \\"Test\\",
),
h2({\\"id\\": \\"H2\\"},
  \\"H2\\",
),
p({},
  img({\\"src\\": \\"./img.jpg\\", \\"alt\\": \\"\\"}),
)

  )
}
",
  },
]
`;
